--- a/credit_card_fraud.ipynb
+++ b/credit_card_fraud.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "#loading the data set \n",
-    "credit_card = pd.read_csv('C:/Users/Janith Manaranga/Documents/sllit_assignment/dataset/creditcard_2023.csv')"
+    "credit_card = pd.read_csv('/home/nuwan/Downloads/sllit assignment/creditcard_2023.csv')"
    ]
   },
   {
